# FCPriceMaster

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLAUDE_CODE_DAY1_PROMPT.md  README.md  ROADMAP.md  SESSION_LOG.md  SESSION_LOG_ARCHIVE.md  design.md
.hallmark/: log.json
backend/: debug_fodder.py  debug_out.txt  pyproject.toml
backend/src/db/: migrate.py  models.py  schema.sql  seed.py
backend/src/db/migrations/: 0001_initial.sql  0002_discord_signals.sql  0003_twitter_reddit_ea.sql  0004_fodder.sql  0005_fodder_cards.sql  0006_recommendations_phase3.sql  0007_tradeable.sql  0008_signal_context.sql  0009_attachment_vision.sql  0010_rec_model_id.sql  0011_data_quality.sql  0012_recommendation_metadata.sql
backend/src/llm/: ask.py  context_builder.py  recommender.py
backend/src/llm/providers/: anthropic_provider.py  base.py  nvidia_provider.py  registry.py
backend/src/scrapers/: base.py  futgg.py
backend/src/utils/: cookie_loader.py
backend/src/workers/: discord_ingest.py  ea_ingest.py  reddit_ingest.py  scheduler.py  signal_tagger.py  twitter_ingest.py
backend/tests/: test_discord_ingest.py  test_ea_ingest.py  test_fodder_scraper.py  test_futgg.py  test_llm_ask.py  test_providers.py  test_recommender.py  test_reddit_ingest.py  test_scheduler.py  test_signal_tagger.py  test_twitter_ingest.py
config/: discord_sources.yaml  llm_config.yaml  release_calendar.yaml  sources.yaml  twitter_accounts.yaml
docs/: futgg_endpoints.md  twitter_sources.md
frontend/: index.html  package.json  pnpm-lock.yaml
nvidia_credentials/: __init__.py  kimi_k2_6.py  (+4 more)
(+25 files in other folders)
