[project]
name = "fcpricemaster-backend"
version = "0.1.0"
description = "FCPriceMaster backend — scraper, scheduler, DB layer"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3",
    "playwright>=1.44",
    "apscheduler>=3.10",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "playwright-stealth>=2.0.3",
    "python-dotenv>=1.2.2",
    "discord-py>=2.4.0",
    "rapidfuzz>=3.9",
    "anthropic>=0.30",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
